fix: snap-align error

--- a/frontend/src/components/About.css
+++ b/frontend/src/components/About.css
@@ -14,7 +14,7 @@
 ::-webkit-scrollbar-corner {
   background: var(--background);
 }
-section {
+.about-section {
   padding-top: 85vh;
   position: relative;
 }
